--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4da77130e5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chats | Kakao Clone</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             <i class="fas fa-clock"></i>
             <i class="fas fa-volume-mute"></i>
             <i class="fas fa-wifi"></i>
-            <span class="tatus-bar__battery-level">
+            <span class="status-bar__battery-level">
                 100%
                 <i class="fas fa-battery-full"></i>
             </span>
