--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find - Kokoa Clone</title>
+    <title>More - Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -29,60 +29,54 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__titile">Find</h1>
+      <h1 class="screen-header__titile">More</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i> </span>
+        <span class="i fas fa-music fa-lg"></span>
+        <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a> </span>
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen more-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="image/myimg.jpg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__titile">Yvonne Lee</h4>
+            <h6 class="user-component__subtitile">+82 10 9406 4222</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <i class="far fa-comment-alt fa-2x"></i>
+        </div>
+      </div>
       <div class="icon-row">
         <div class="icon-row__icon">
-          <i class="fas fa-qrcode"></i><span>QR Code</span>
+          <i class="far fa-calendar"></i></i><span>Calendar</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-address-book"></i><span>Add by<br />Contacts</span>
+          <i class="far fa-smile-beam"></i></i><span>Emoticons</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fas fa-fingerprint"></i><span>Add by ID</span>
+          <i class="fas fa-paint-roller"></i></i><span>Themes</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-envelope"></i><span>Invite</span>
+          <i class="fas fa-file-invoice-dollar"></i></i><span>Account</span>
         </div>
       </div>
-      <div class="recommended-friends">
-        <h6 class="recommended-friends__title">Recommended Friends</h6>
-        <span>You have no recommended friends.</span>
-      </div>
-      <div class="open-chat">
-        <div class="open-chat__header">
-          <h4 class="open-chat__titile">Open Chat</h4>
-          <span
-            >Go to Openchat Home<i class="fas fa-chevron-right fa-xs"></i
-          ></span>
-        </div>
-        <div class="open-post">
-          <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtag">#bts #army #friends</h6>
-            <div class="open-post__members">
-              <img src="image/myimg.jpg" />
-              <span class="open-post__member-count">802 members</span>
-              <div class="divider"></div>
-              <span class="open-post__member-status">Active</span>
-            </div>
-          </div>
-          <div class="open-post__column">
-            <div class="open-post__photo">
-              <img src="image/myimg.jpg" />
-              <div class="open-post__heart-count">
-                <div class="i fas fa-heart fa-xs"></div>
-                <span>326</span>
+      <div class="more-suggestions">
+          <h4 class="more-suggestions__titile">Suggestions</h4>
+          <div class="more-suggestions__icons">
+              <div class="more-suggestions__icon">
+                  <div class="more-suggestions__icon-image"><i class="fas fa-quote-right"></i></div><span class="more-sugestions__icon-text">Kakao Story</span>
               </div>
-            </div>
+                            <div class="more-suggestions__icon">
+                  <div class="more-suggestions__icon-image"><i class="fas fa-quote-right"></i></div><span class="more-sugestions__icon-text">Kakao Story</span>
+              </div>
           </div>
-        </div>
       </div>
     </main>
 
