--- a/chats.html
+++ b/chats.html
@@ -39,25 +39,27 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="image/myimg.jpg"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__titile">Yvonne Lee</h4>
-            <h6 class="user-component__subtitile">Hi! Time to play :P</h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="image/myimg.jpg"
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__titile">Yvonne Lee</h4>
+              <h6 class="user-component__subtitile">Hi! Time to play :P</h6>
+            </div>
           </div>
-        </div>
 
-        <div class="user-component__column">
-          <span class="user-component__time">
-            12:22
-          </span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+          <div class="user-component__column">
+            <span class="user-component__time">
+              12:22
+            </span>
+            <div class="badge">1</div>
+          </div>
+        </div></a
+      >
     </main>
 
     <nav class="nav">
