--- a/friends.html
+++ b/friends.html
@@ -89,18 +89,18 @@
             ><i class="fas fa-user fa-2x"></i
           ></a>
         </li>
-        <li>
+        <li class="nav__btn">
           <a class="nav__link" href="chats.html"
             ><span class="nav__notice badge">1</span>
             <i class="far fa-comment fa-2x"></i
           ></a>
         </li>
-        <li>
+        <li class="nav__btn">
           <a class="nav__link" href="find.html"
             ><i class="fas fa-search fa-2x"></i
           ></a>
         </li>
-        <li>
+        <li class="nav__btn">
           <a class="nav__link" href="more.html"
             ><span class="nav__dots-notice"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i
@@ -108,6 +108,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/4da77130e5.js"
