find화면에 heartbeat animation 수정

--- a/find.html
+++ b/find.html
@@ -77,7 +77,7 @@
             <div class="open-post__photo">
               <img src="image/myimg.jpg" />
               <div class="open-post__heart-count">
-                <div class="i fas fa-heart fa-xs"></div>
+                <i class="fas fa-heart fa-xs"></i>
                 <span>326</span>
               </div>
             </div>
