--- a/main-project/settings.html
+++ b/main-project/settings.html
@@ -67,6 +67,10 @@
       </ul>
     </main>
 
+    <div id="no-mobile">
+      <span>Your screen is TOO big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/4da77130e5.js"
       crossorigin="anonymous"
