--- a/main-project/chat.html
+++ b/main-project/chat.html
@@ -72,6 +72,9 @@
         ><button><i class="fas fa-arrow-up"></i>
       </div>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is TOO big</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/4da77130e5.js"
