--- a/main-project/chats.html
+++ b/main-project/chats.html
@@ -88,6 +88,9 @@
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">
+      <span>Your screen is TOO big</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/4da77130e5.js"
