--- a/main-project/friends.html
+++ b/main-project/friends.html
@@ -113,6 +113,10 @@
       <i class="fas fa-comment"></i>
     </div>
 
+    <div id="no-mobile">
+      <span>Your screen is TOO big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/4da77130e5.js"
       crossorigin="anonymous"
