--- a/main-project/index.html
+++ b/main-project/index.html
@@ -42,6 +42,10 @@
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is TOO big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/4da77130e5.js"
       crossorigin="anonymous"
