--- a/main-project/index.html
+++ b/main-project/index.html
@@ -35,7 +35,7 @@
       </p>
     </header>
 
-    <form id="login-form">
+    <form id="login-form" action="friends.html" method="get" id="login-form">
       <input type="text" placeholder="Email or phone number" />
       <input type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
